# buildifier-prebuilt

./: .bazelrc  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel_versions.bzl  binary_runner.bash.template  binary_runner.bat.template  buildtools.bzl  defs.bzl  deps.bzl  getshas.sh  rules.bzl  runner.bash.template  runner.bat.template  toolchain.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: generate-notes.sh
.github/actions/build_and_test/: action.yml
.github/workflows/: ci.yml  create_release.yml
buildifier/: BUILD  buildifier_binary.bzl  factory.bzl
buildozer/: BUILD  buildozer_binary.bzl
examples/: BUILD  modify_example_test_runner.sh  simple_test_runner.sh
examples/bzlmod/: .bazelrc  MODULE.bazel  hello_world_test.sh
examples/bzlmod_specify_assets/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  version_test.sh
examples/simple/: .bazelrc  BUILD  WORKSPACE  hello_world.sh  hello_world_test.sh
examples/specify_assets/: .bazelrc  BUILD  WORKSPACE
release/: BUILD  README.md  workspace_snippet.tmpl
tests/: BUILD  buildtools_tests.bzl
tests/binary_runner/: BUILD  binary_runner_test.sh
tests/buildifier/: BUILD  buildifier_test.sh
tests/tools_tests/: BUILD  generate_assets_declaration_test.sh
tests/unittest/: BUILD  unittest.bash  unittest_utils.sh
tools/: BUILD  generate_assets_declaration.sh
